src/objects/ProjectPhase__c.object
<CustomObject>
    <description>The different phases of a project as planned in iteration zero to drive swim charts.</description>
    <fields>
        <fullName>AchievedbyDate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the phase was finished by the committed date</description>
        <inlineHelpText>Whether or not the phase was finished by the committed date</inlineHelpText>
        <label>Achieved by Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommittedIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not we have actually committed to the date</description>
        <inlineHelpText>Whether or not we have actually committed to the date</inlineHelpText>
        <label>Committed Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>Date when the project is supposed to end</description>
        <inlineHelpText>Date when the project is supposed to end</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImproveGPTWRatings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will this phase increase our ratings for the Great Places to Work survey?</description>
        <inlineHelpText>Will this phase increase our ratings for the Great Places to Work survey?</inlineHelpText>
        <label>Improve GPTW Ratings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImproveVSAT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will this improve the number of very satisfied students?</description>
        <inlineHelpText>Will this improve the number of very satisfied students?</inlineHelpText>
        <label>Improve VSAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncreaseApplicants__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will this phase increase the number of applicants to WGU?</description>
        <inlineHelpText>Will this phase increase the number of applicants to WGU?</inlineHelpText>
        <label>Increase Applicants</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncreaseMatriculates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will this increase the number of students matriculated to the university?</description>
        <inlineHelpText>Will this increase the number of students matriculated to the university?</inlineHelpText>
        <label>Increase Matriculates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncreaseOTP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will this phase increase Student On Time Progress</description>
        <inlineHelpText>Will this phase increase Student On Time Progress?</inlineHelpText>
        <label>Increase OTP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncreaseSAP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will this phase increase financial aid eligibility?</description>
        <inlineHelpText>Will this phase increase financial aid eligibility?</inlineHelpText>
        <label>Increase SAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PhaseType__c</fullName>
        <description>The general phase type this phase is part of</description>
        <inlineHelpText>The general phase type this phase is part of</inlineHelpText>
        <label>Phase Type</label>
        <picklist>
            <picklistValues>
                <fullName>Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectRelated__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The project that this phase is related to</description>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>ProjectPhases</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Date the phase is planned to start</description>
        <inlineHelpText>Date the phase is planned to start</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Project Phase</label>
    <nameField>
        <label>Project Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Phases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>